# llm-stock-analyzer

./: .gitignore  2026-01-20-quantified-trend-scoring.md  README.md  pyproject.toml
app/: main.py
app/api/v1/: endpoints.py
app/configs/: config.example.yaml  config.py
app/internal/llm/: chain.py  opencode_client.py
app/internal/yfinance/: stock_data.py
app/prompts/: stock_analyzer_prompt.md
app/services/analysis/: stock_trend_pipeline.py  trend_analysis.py
tests/: test_config.py  test_prompt.py  test_stock_trend_pipeline.py  test_trend_analysis.py
